<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margen_elemento"
        android:layout_marginLeft="@dimen/margen_elemento"
        android:layout_marginRight="@dimen/margen_elemento"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp" >

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_elemento"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/et_nombre" />

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_elemento"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/et_fecha"/>

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_elemento"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/et_telefono"/>

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_elemento"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/et_email"/>

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_elemento"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/et_descripcion"/>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/btn_siguiente"
            android:textColor="#FFFFFF"
            android:theme="@style/MiButonRaised"
            android:layout_marginTop="@dimen/margen_elemento"
            android:layout_below="@+id/srlMiIndicadorRefresh"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>