<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmacionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margen_elemento"
        android:layout_marginLeft="@dimen/margen_elemento"
        android:layout_marginRight="@dimen/margen_elemento"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp" >

        <TextView
            android:id="@+id/tvTituloConfirma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/tvConfirmar"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/et_nombre"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDatoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_nombre" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_elemento"
            android:text="@string/et_fecha"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDatoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/et_fecha"/>

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_elemento"
            android:text="@string/et_telefono"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDatoTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/et_telefono"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_elemento"
            android:text="@string/et_email"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDatoCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/et_email"/>

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_elemento"
            android:text="@string/et_descripcion"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDatoDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/et_descripcion"/>

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/srlMiIndicadorRefresh"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/margen_elemento"
            android:layout_marginRight="16dp"
            android:text="@string/btn_editar"
            android:textColor="#FFFFFF"
            android:theme="@style/MiButonRaised" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>